change z-index of work-background box to avoid overlapping of another elements

--- a/assets/sass/work.scss
+++ b/assets/sass/work.scss
@@ -149,6 +149,7 @@ $desktop: 1280px;
   left: 0;
   background-color: rgb(0,0,0);
   overflow: scroll;
+  z-index: 99999;
   //background-color: rgba(0,0,0,0.8);
 }
 
